--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/login.css" type="text/css"/>
+    
 </head>
 
 <body>
@@ -62,23 +63,22 @@
 
 <div id="main">
     <div class="main">
-        <form action="/login" method="post">
+        <form action="/signup" method="post">
             <h1>
                 <a href="/auth/facebook" class="btn-social btn-facebook btn-lg">
-                    <i class="fa fa-facebook"></i> Login with Facebook
+                    <i class="fa fa-facebook"></i> SignUp with Facebook
                 </a>
             </h1>
 
             <h1>
                 <a href="/auth/google" class="btn-social btn-gplus btn-lg">
-                    <i class="fa fa-google-plus"></i> Login with Google
+                    <i class="fa fa-google-plus"></i> SignUp with Google
                 </a>
             </h1>
-        
+    
             <h1>
-                Login
+                Register
             </h1>
-
             <% if(hasErrors){%>
                 <div class="alert alert-danger text-center">
                     <a href="#" class="close" data-dismiss="alert" aria-label="close" >&times;</a>
@@ -88,9 +88,12 @@
                 </div>
             <%}%>
 
-            
             <div class="inset">
-                
+                <p>
+                  <label for="username">USERNAME</label>
+                  <input type="text" name="username" class="" placeholder="enter username">
+                </p>
+
                 <p>
                     <label for="email">EMAIL ADDRESS</label>
                     <input type="text" name="email" placeholder="email here" />
@@ -103,8 +106,8 @@
             </div>
 
             <p class="p-container">
-                <span><a href="/signup">Not registered</a></span>
-                <input type="submit" class="login-log" style=" background: #3bb5ec; border: #3bb5ec;" value="Login">
+                <span><a href="/">Login</a></span>
+                <input type="submit" class="login-log" style=" background: #3bb5ec; border: #3bb5ec;" value="Register">
             </p>
         </form>
     </div>
